# agents

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  sample_queries.txt
.devcontainer/: devcontainer.json
ec2/: .env.example  Caddyfile  Dockerfile  Makefile  README.md  aws-setup.sh  docker-compose.yml  entrypoint.sh  reset.sh
frameworks/_shared/: cli.py  config.py  data_io.py
frameworks/agents_sdk/: README.md  agent.py  main.py  tools.py
frameworks/crewai/: crew.py  main.py  tools.py
frameworks/langchain/: README.md  agent.py  main.py  tools.py
frameworks/langgraph/: README.md  graph.py  main.py  tools.py
tests/: test_tools.py
tools_data/: event_signups.json  maintenance_requests.json  packages.json  property_info.json  residents.json
